<resources>
    <string-array name="state_selection">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string name="app_name">ListIt</string>
    <string name="error_fetch_listings">Limited or no network availability. Please check your connection.</string>
    <string name="create_listing">Create a listing</string>
    <string name="camera_upload">Camera</string>
    <string name="gallery_upload">Gallery</string>
    <string name="description_hint">i.e. Used, but in excellent condition.</string>
    <string name="description_title">Description</string>
    <string name="price_hint">i.e. $998</string>
    <string name="price_title">Price</string>
    <string name="title_hint">i.e. Samsung Galaxy S10</string>
    <string name="location_title">Location</string>
    <string name="city_hint">Mobile</string>
    <string name="listing_title">Listing title</string>
    <string name="submit">Create listing</string>
    <string name="heading">Items for sale</string>
    <string name="subheading">Have a look around</string>
    <string name="location">Location</string>
    <string name="my_app_id">listit-ipmxv</string>
    <string name="mongo_write_success">Write to MongoDB successful</string>
</resources>
