<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:text="@string/create_listing"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/listing_title" />

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/price_title" />

        <EditText
            android:id="@+id/price_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/price_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/location_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/city_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/city_hint"/>

            <Spinner
                android:id="@+id/state_select"
                android:layout_width="16dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:entries="@array/state_selection"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <ImageView
            android:id="@+id/your_image"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/camera_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/camera_upload"/>

            <Button
                android:id="@+id/gallery_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gallery_upload"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/description_title" />

        <EditText
            android:id="@+id/description_input"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|start"
            android:maxLines="10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:hint="@string/description_hint"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/submit"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>